--- a/src/main/resources/templates/boardmodify.html
+++ b/src/main/resources/templates/boardmodify.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http//www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>게시물 작성폼</title>
@@ -25,9 +25,9 @@
 </style>
 <body>
 <div class="layout">
-    <form action="@{/board/update/{id}(id = ${board.id})}" method="post">
-        <input name="title" type="text" th:value ="${board.title}">
-        <textarea name="content" th:text ="${board.content}"}></textarea>
+    <form th:action="@{/board/update/{id}(id = ${board.id})}" method="post">
+        <input name="title" type="text" th:value="${board.title}">
+        <textarea name="content" th:text ="${board.content}"></textarea>
         <button type="submit">수정</button>
     </form>
 </div>
